just squashing some bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -648,18 +648,19 @@ img {
   }
 
   .total-cards-played {
+    width: 549px;
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     font-family: $gameplay-font;
     font-weight: normal;
     font-size: 1.75rem;
     color: $gameplay-font-col;
 
-    div {
-      width: 40%;
-      margin: 0 5%;
+    p {
+      width: 60px;
+      height: 60px;
     }
   }
 }
@@ -755,7 +756,7 @@ img {
   position: relative;
   width: 85%;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
 
   div {
     display: flex;
